[tool.poetry]
name = "field-transformer"
version = "0.1.2"
description = "A package to transform columns and rows of a dataframe."
authors = ["Craig Nicol"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.0"

[tool.poetry.dev-dependencies]
autopep8 = "2.0.4"
isort = "5.12.0"
pytest = "7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
